# triangle_intersection

./: CMakeLists.txt  bash_scrypt
include/: line_t.h  plate_t.h  point_t.h  triangle.h  triangle_t.h  vector_t.h
src/: main.cpp
